[AOT] jaotc doesn't work with Graal

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 9, 10
    • Component/s: hotspot
    • b21

      Many compiler/aot tests fail when run with
       "-XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI -XX:+TieredCompilation -XX:+UseJVMCICompiler -Djvmci.compiler=graal"
      because methods which are expected to be compiled are not compiled.

            Assignee:
            Vladimir Kozlov
            Reporter:
            Ekaterina Pavlova
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: