8181823: [AOT] jaotc doesn't work with Graal

Add new flag to indicate when to calculate class fingerprint

Reviewed-by: iklam, iveresov